--- a/src/pages/_components/CardListMore.module.scss
+++ b/src/pages/_components/CardListMore.module.scss
@@ -23,6 +23,7 @@
         font-weight: 700;
         line-height: 150%; /* 27px */
         margin-bottom: 8px;
+        text-wrap: pretty;
       }
 
       .desc {
@@ -33,6 +34,7 @@
         font-weight: 400;
         line-height: 150%; /* 21px */
         margin-bottom: 24px;
+        text-wrap: balance;
       }
 
       .more {
