--- a/src/pages/_components/Section.module.scss
+++ b/src/pages/_components/Section.module.scss
@@ -10,6 +10,8 @@
     font-weight: 600;
     line-height: 150%; /* 36px */
     margin-bottom: 12px;
+    // text-wrap: pretty;
+    text-wrap: balance;
   }
 
   .desc {
@@ -21,7 +23,8 @@
     font-weight: 400;
     line-height: 150%; /* 24px */
     margin-bottom: 30px;
-    hyphens: auto;
+    // hyphens: auto;
+    text-wrap: balance;
   }
   @media (min-width: 577px) {
     width: 100%;
